[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/enemies/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://scenes/effects/BeamParticle2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/effects/CollisionParticle2D.tscn" type="PackedScene" id=3]

[node name="LaserBeam" type="RayCast2D"]
cast_to = Vector2( 1000, 0 )
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.177
autostart = true

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( -2.068, 0.5, 100, 0.5 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CollisionParticle2D" parent="." instance=ExtResource( 3 )]

[node name="BeamParticle2D" parent="." instance=ExtResource( 2 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
